adjust grid height property to prevent horizontal scrolling

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -53,7 +53,6 @@ body {
 .grid {
   display: grid;
   gap: 0.25rem;
-  height: calc(100svh - 5rem);
   width: 100%;
 }
 .cell {
